# robot_web_gui

./: .gitignore  README.md
back_end/: client.py  img_send.py  requirements.txt  send_dlib.py  server.py
front_end/: index.html
front_end/menu/emoji/: index.html  main.js
front_end/menu/vision/: index.html  main.js
front_end/menu/voice/: index.html
front_end/remote/: index.html  main.js
front_end/remote/menu/vision/: index.html  main.js
ros2_ws/src/robot_msg/: CMakeLists.txt  package.xml
ros2_ws/src/robot_msg/msg/: Control.msg  Status.msg
ros2_ws/src/ros2_bridge_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_bridge_py/ros2_bridge_py/: bridge_dlib.py  bridge_remote.py  bridge_video.py  bridge_websocket.py
